[workspace]
resolver = "2"
default-members = [
	"lang",
	"lang-pp",
	"lang-lexer",
	"lang-types",
	"lang-util",
	"lang-util-derive",
	"lang-util-dev",
	"lang-cli",
]

members = [
	"lang",
	"lang-pp",
	"lang-lexer",
	"lang-types",
	"lang-util",
	"lang-util-derive",
	"lang-util-dev",
	"lang-cli",
	"xtask",
]

[patch.crates-io]
hlsl-lang       = { path = "lang" }
hlsl-lang-pp    = { path = "lang-pp" }
hlsl-lang-lexer = { path = "lang-lexer" }
hlsl-lang-types = { path = "lang-types" }
hlsl-lang-cli   = { path = "lang-cli" }

lang-util        = { path = "lang-util" }
lang-util-derive = { path = "lang-util-derive" }
lang-util-dev    = { path = "lang-util-dev" }

[profile.dev.build-override]
opt-level = 2

[profile.release.build-override]
opt-level = 2
