[package]
name = "hlsl-lang-lexer"
version = "0.8.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
license = "BSD-3-Clause"
description = "HLSL language lexers"
homepage = "https://github.com/alixinne/hlsl-lang"
documentation = "https://docs.rs/hlsl-lang-lexer/"
repository = "https://github.com/alixinne/hlsl-lang"
readme = "README.md"
keywords = ["hlsl", "language", "parser"]
categories = ["parser-implementations", "rendering"]
rust-version = "1.82.0"

[dependencies]
hlsl-lang-pp = "=0.8.0"
hlsl-lang-types = "=0.8.0"
lang-util = { version = "=0.8.0", features = ["lalrpop"] }

thiserror = "2.0"

rserde = { version = "1.0", optional = true, features = ["derive"], package = "serde" }

lalrpop-util = { version = "0.22.1", default-features = false }

[features]
full = ["hlsl-lang-pp/full"]

# AST Serialization
serde = ["rserde", "hlsl-lang-types/serde", "lang-util/serde"]
