[package]
name = "hlsl-lang-quote"
version = "0.8.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Quoting proc-macro for hlsl-lang"
homepage = "https://github.com/alixinne/hlsl-lang"
documentation = "https://docs.rs/hlsl-lang-quote/"
repository = "https://github.com/alixinne/hlsl-lang"
readme = "README.md"
keywords = ["hlsl", "language", "parser", "ast", "macro"]
categories = ["parser-implementations", "rendering"]
rust-version = "1.82.0"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
hlsl-lang = { version = "=0.8.0", default-features = false, features = ["lexer-full"] }

proc-macro2 = "1"
quote = "1"

[features]
# Default: only translation units can be quoted
default = ["quote-parsable"]

# Additional sub-quotes. Increases compilation time.
quote-expr = ["hlsl-lang/parser-expr"]
quote-statement = ["hlsl-lang/parser-statement"]

# Allow parsing quoted expressions with parseable
quote-parsable = []
