[package]
name = "hlsl-lang-types"
version = "0.8.0"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
license = "BSD-3-Clause"
description = "HLSL language AST"
homepage = "https://github.com/alixinne/hlsl-lang"
documentation = "https://docs.rs/hlsl-lang-lexer/"
repository = "https://github.com/alixinne/hlsl-lang"
readme = "README.md"
keywords = ["hlsl", "language", "parser"]
categories = ["rendering"]
rust-version = "1.82.0"

[dependencies]
lang-util = "=0.8.0"
thiserror = "2.0"

rserde = { version = "1.0", optional = true, features = ["derive"], package = "serde" }

[features]
default = []

# AST Serialization
serde = ["rserde", "lang-util/serde"]
